WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279348
Crash happens when applying filter and drawing text in 2D canvas
https://bugs.webkit.org/show_bug.cgi?id=279348
Summary
Crash happens when applying filter and drawing text in 2D canvas
Said Abou-Hallawa
Reported
2024-09-09 01:08:07 PDT
Created
attachment 472498
[details]
canvas-filter-text-crash 1. Enable Canvas Filters 2. Open the attached text case. Result: WebKit will crash
Attachments
canvas-filter-text-crash
(652 bytes, text/html)
2024-09-09 01:08 PDT
,
Said Abou-Hallawa
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2024-09-09 01:08:32 PDT
rdar://135455808
Said Abou-Hallawa
Comment 2
2024-09-09 01:20:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33314
EWS
Comment 3
2024-09-10 17:44:47 PDT
Committed
283451@main
(59e4b7c01999): <
https://commits.webkit.org/283451@main
> Reviewed commits have been landed. Closing PR #33314 and removing active labels.
EWS
Comment 4
2024-09-12 20:08:14 PDT
Committed
283286.26@safari-7620-branch
(4150e2323292): <
https://commits.webkit.org/283286.26@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1754 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug